k8s/user-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
    - port: 5000
      name: http
      targetPort: 5000
    - port: 50052
      name: grpc
      targetPort: 50052
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
        - name: user
          image: user:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["gunicorn"]
          args: ["-c", "gunicorn.conf.py", "-b", "0.0.0.0:5000", "app:app"]
          ports:
            - containerPort: 5000
            - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db
spec:
  type: ClusterIP
  selector:
    component: payment-db
  ports:
    - port: 6379
      name: redis
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payment-db
spec:
  serviceName: payment-db
  replicas: 1
  selector:
    matchLabels:
      component: payment-db
  template:
    metadata:
      labels:
        component: payment-db
    spec:
      containers:
        - name: payment-db
          image: redis:7.2-bookworm
          command: ["redis-server", "--requirepass", "redis", "--appendonly", "yes"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: payment-db-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: payment-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 4Gi
